--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/index.css">
-    
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/css/index.css" />
+  </head>
+  <body>
+    <header>
+      <img src="./assets/images/Grocery_logo-removebg-preview.png" alt="image" />
 
-   <header>
+      <div class="navbar">
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Work</a>
+        <a href="">Shop</a>
+        <a href="">Blog</a>
+        <a href="">Contact</a>
+      </div>
 
-   </header>
-   
-   <main>
+      <button id="shopping">Shop Now</button>
 
-   </main>
+    </header>
 
-   <footer>
+    <main></main>
 
-   </footer>
+    <footer></footer>
 
-   <script src="./assets/js/index.js"></script>   
-
-</body>
-
+    <script src="./assets/js/index.js"></script>
+  </body>
 </html>
