finished second section

--- a/index.html
+++ b/index.html
@@ -57,8 +57,50 @@
           <i class="fa fa-lock" aria-hidden="true"></i>
           <p>Payment Secure</p>
         </div>
-  
+      </section>
+
+      <section id="dairys">
         
+        <div class="ellipse">
+          <i class="fa fa-angle-left" aria-hidden="true"></i>
+        </div>
+
+        <div class="dairy">
+          <img src="./assets/images/Dairy.jpg" alt="image">
+          <p>Dairy</p>
+        </div>
+
+        <div class="dairy">
+          <img src="./assets/images/Fruits.jpg" alt="image">
+          <p>Fruits</p>
+        </div>
+
+        <div class="dairy">
+          <img src="./assets/images/veggies.jpg" alt="image">
+          <p>Veggies</p>
+        </div>
+
+        <div class="dairy">
+          <img src="./assets/images/meat.jpg" alt="image">
+          <p>Meat</p>
+        </div>
+
+        <div class="dairy">
+          <img src="./assets/images/sweets.jpg" alt="image">
+          <p>Sweet</p>
+        </div>
+
+        <div class="dairy">
+          <img src="./assets/images/Deserts.jpg" alt="image">
+          <p>Deserts</p>
+        </div>
+
+
+        <div class="ellipse">
+          <i class="fa fa-angle-right" aria-hidden="true"></i>
+        </div>
+
+         
       </section>
     </main>
 
