finished trending products section

--- a/index.html
+++ b/index.html
@@ -160,6 +160,64 @@
         </div>
       </div>
     </section>
+
+    <section>
+      <div class="trending-products">
+        <p>Trending Products</p>
+        <div class="card-container">
+        <div class="card-rectangle">
+          <img src="./assets/images/veggies.jpg" alt="dairy card image">
+          <p id="Tomato">Tomato juice</p>
+          <p id="quantity">1kg  <i class="fa fa-star" aria-hidden="true"></i></p>
+          <p id="price">$16.00</p>
+        </div>
+        <div class="card-rectangle">
+          <img src="./assets/images/toast.jpg" alt="dairy card image">
+          <p id="Tomato">Toast ice cream</p>
+          <p id="quantity">2kg  <i class="fa fa-star" aria-hidden="true"></i></p>
+          <p id="price">$6.00</p>
+        </div>
+
+        <div class="card-rectangle">
+          <img src="./assets/images/sweets.jpg" alt="dairy card image">
+          <p id="Tomato">Sweets</p>
+          <p id="quantity">3kg  <i class="fa fa-star" aria-hidden="true"></i></p>
+          <p id="price">$16.00</p>
+        </div>
+
+        <div class="card-rectangle">
+          <img src="./assets/images/oranges.jpg" alt="dairy card image">
+          <p id="Tomato">Fresh Oranges</p>
+          <p id="quantity">4kg  <i class="fa fa-star" aria-hidden="true"></i></p>
+          <p id="price">$16.00</p>
+        </div>
+
+        <div class="card-rectangle">
+          <img src="./assets/images/dates.jpg" alt="dairy card image">
+          <p id="Tomato">Fresh Dates</p>
+          <p id="quantity">5kg  <i class="fa fa-star" aria-hidden="true"></i></p>
+          <p id="price">$40.00</p>
+        </div>
+
+        <div class="card-rectangle">
+          <img src="./assets/images/veggies.jpg" alt="dairy card image">
+          <p id="Tomato">Cucumber</p>
+          <p id="quantity">5kg  <i class="fa fa-star" aria-hidden="true"></i></p>
+          <p id="price">$70.00</p>
+        </div>
+
+        <div class="card-rectangle">
+          <img src="./assets/images/Deserts.jpg" alt="dairy card image">
+          <p id="Tomato">Cakes</p>
+          <p id="quantity">10kg  <i class="fa fa-star" aria-hidden="true"></i></p>
+          <p id="price">$200.00</p>
+
+        </div>
+      </div>
+      </div>
+
+      
+    </section>
     </main>
 
     <footer></footer>
