finished grocery website project

--- a/index.html
+++ b/index.html
@@ -211,7 +211,6 @@
           <p id="Tomato">Cakes</p>
           <p id="quantity">10kg  <i class="fa fa-star" aria-hidden="true"></i></p>
           <p id="price">$200.00</p>
-
         </div>
       </div>
       </div>
@@ -220,7 +219,52 @@
     </section>
     </main>
 
-    <footer></footer>
+    <footer id="grocery-shop">
+    <div class="footer-logo">
+      <img src="./assets/images/Grocery_logo-removebg-preview.png" alt="footer-logo">
+    </div>
+    <div class="quick-links">
+     <p>Quick Link</p>
+     <hr>
+     <a href="#">Fruits</a>
+     <a href="#">Veggies</a>
+     <a href="#">Dairy products</a>
+     <a href="#">Bread</a>
+     <a href="#">Fresh Honey</a>
+     <a href="#">Cereals</a>
+    </div>
+    
+    <div class="quick-links">
+      <p>About</p>
+      <hr>
+      <a href="#">Privacy</a>
+      <a href="#">Terms & Policy</a>
+      <a href="#">Storage stock</a>
+      <a href="#">Delivery</a>
+      <a href="#">Podcast</a>
+    </div>
+
+
+    <div class="quick-links">
+      <p>Contact</p>
+      <hr>
+      <a href="#">Gmail</a>
+      <a href="#">Terms & Policy</a>
+      <a href="#">Storage stock</a>
+      <a href="#">Delivery</a>
+      <a href="#">Podcast</a>
+    </div>
+
+    <div class="location quick-links">
+      <p id="locate">Location</p>
+    <hr>
+    <p class="address">1411 E Renner Rd, Richardson, TX 75082, United States</p>
+    <p class="address">Phone: +1 214-273-0902</p>
+    <img src="./assets/images/grocery map.png" alt="grocery-map">
+    </div>
+
+
+    </footer>
 
     <script src="./assets/js/index.js"></script>
   </body>
