finished grocery  product description

--- a/index.html
+++ b/index.html
@@ -162,15 +162,20 @@
     </section>
 
     <section>
+
       <div class="trending-products">
         <p>Trending Products</p>
+
         <div class="card-container">
-        <div class="card-rectangle">
-          <img src="./assets/images/veggies.jpg" alt="dairy card image">
-          <p id="Tomato">Tomato juice</p>
-          <p id="quantity">1kg  <i class="fa fa-star" aria-hidden="true"></i></p>
-          <p id="price">$16.00</p>
-        </div>
+          <a href="./assets/pages/Product-des.html">
+            <div class="card-rectangle">
+              <img src="./assets/images/veggies.jpg" alt="dairy card image">
+              <p id="Tomato">Tomato juice</p>
+              <p id="quantity">1kg <i class="fa fa-star" aria-hidden="true"></i></p>
+              <p id="price">$16.00</p>
+            </div>
+          </a>
+    
         <div class="card-rectangle">
           <img src="./assets/images/toast.jpg" alt="dairy card image">
           <p id="Tomato">Toast ice cream</p>
@@ -265,6 +270,8 @@
 
 
     </footer>
+
+
 
     <script src="./assets/js/index.js"></script>
   </body>
