finished the home screen page

--- a/assets/pages/Product-des.html
+++ b/assets/pages/Product-des.html
@@ -58,8 +58,8 @@
 
             <div id="containing">
               <a href="#" id="heart">
-                <i class="fa fa-heart-o" aria-hidden="true"></i>Save</a
-              >
+                <i class="fa fa-heart-o" aria-hidden="true"></i>Save
+              </a>
 
               <a href="./Shopping-cart.html" id="add-to-cart-button">
                <i class="fa fa-shopping-cart" aria-hidden="true"></i>Add To
@@ -68,56 +68,55 @@
             </div>
           </div>
         </div>
-
-        <footer id="grocery-shop">
-          <div class="footer-logo">
-            <img
-              src="/assets/images/Grocery_logo-removebg-preview.png"
-              alt="footer-logo"
-            />
-          </div>
-          <div class="quick-links">
-            <p>Quick Link</p>
-            <hr />
-            <a href="#">Fruits</a>
-            <a href="#">Veggies</a>
-            <a href="#">Dairy products</a>
-            <a href="#">Bread</a>
-            <a href="#">Fresh Honey</a>
-            <a href="#">Cereals</a>
-          </div>
-
-          <div class="quick-links">
-            <p>About</p>
-            <hr />
-            <a href="#">Privacy</a>
-            <a href="#">Terms & Policy</a>
-            <a href="#">Storage stock</a>
-            <a href="#">Delivery</a>
-            <a href="#">Podcast</a>
-          </div>
-
-          <div class="quick-links">
-            <p>Contact</p>
-            <hr />
-            <a href="#">Gmail</a>
-            <a href="#">Terms & Policy</a>
-            <a href="#">Storage stock</a>
-            <a href="#">Delivery</a>
-            <a href="#">Podcast</a>
-          </div>
-
-          <div class="location quick-links">
-            <p id="locate">Location</p>
-            <hr />
-            <p class="address">
-              1411 E Renner Rd, Richardson, TX 75082, United States
-            </p>
-            <p class="address">Phone: +1 214-273-0902</p>
-            <img src="/assets/images/grocery map.png" alt="grocery-map" />
-          </div>
-        </footer>
       </section>
     </main>
+    <footer id="grocery-shop">
+      <div class="footer-logo">
+        <img
+          src="/assets/images/Grocery_logo-removebg-preview.png"
+          alt="footer-logo"
+        />
+      </div>
+      <div class="quick-links">
+        <p>Quick Link</p>
+        <hr />
+        <a href="#">Fruits</a>
+        <a href="#">Veggies</a>
+        <a href="#">Dairy products</a>
+        <a href="#">Bread</a>
+        <a href="#">Fresh Honey</a>
+        <a href="#">Cereals</a>
+      </div>
+
+      <div class="quick-links">
+        <p>About</p>
+        <hr />
+        <a href="#">Privacy</a>
+        <a href="#">Terms & Policy</a>
+        <a href="#">Storage stock</a>
+        <a href="#">Delivery</a>
+        <a href="#">Podcast</a>
+      </div>
+
+      <div class="quick-links">
+        <p>Contact</p>
+        <hr />
+        <a href="#">Gmail</a>
+        <a href="#">Terms & Policy</a>
+        <a href="#">Storage stock</a>
+        <a href="#">Delivery</a>
+        <a href="#">Podcast</a>
+      </div>
+
+      <div class="location">
+        <p id="locate">Location</p>
+        <hr />
+        <p class="address">
+          1411 E Renner Rd, Richardson, TX 75082, United States
+        </p>
+        <p class="address">Phone: +1 214-273-0902</p>
+        <img src="/assets/images/grocery map.png" alt="grocery-map" />
+      </div>
+    </footer>
   </body>
 </html>
