--- a/assets/pages/Login-screen.html
+++ b/assets/pages/Login-screen.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/login.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/assets/css/login.css" />
+  </head>
+  <body>
+    <main>
+      <section class="login">
+        <div class="yellow-box">
+          <h1>Login</h1>
+          <p id="details">Please enter your details below</p>
 
-    <div class="container">
-        <h1>Login</h1>
-        <p id="details">
-            Please enter your detals below
-        </p>
-        
-    </div>
-</body>
+          <form>
+            <input type="email" placeholder="Email:" />
+
+            <input type="password" placeholder="Password:" />
+            <button id="Logins">Login</button>
+          </form>
+        </div>
+
+          <div class="container">
+            <img src="/assets/images/walmart.png" alt="image" id="walmart"/>
+            <img src="/assets/images/vector.png" alt="image" id="desktop"/> 
+          </div>
+      </section>
+    </main>
+   
+  </body>
 </html>
