start registers page

--- a/assets/pages/Register.html
+++ b/assets/pages/Register.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/assets/css/register.css">
 </head>
 <body>
+    <!--Start of register----------->
+    <section>
+     <div id="yellow-box">
+      <h1>Register</h1>
+      <p id="details">Please enter your details below:</p>
+      <form>
+        <input type="text" placeholder="First Name:">
+        <input type="text" placeholder="Last Name:">
+        <input type="email" placeholder="Email:">
+        <input type="number" placeholder="Phone-Number:">
+        <input type="password" placeholder="Password:">
+        <input type="password" placeholder="Retype Password:">
+      </form>
+     </div>
+
+     <div id="green-box">
+
+     </div>
+    </section>
+ <!--end of register----------->
 </body>
 </html>
