update the footer links with register and login screen

--- a/index.html
+++ b/index.html
@@ -262,6 +262,8 @@
         <a href="#">Storage stock</a>
         <a href="#">Delivery</a>
         <a href="#">Podcast</a>
+        <a href="/assets/pages/Register.html">Register</a>
+        <a href="/assets/pages/Login-screen.html">Login</a>
       </div>
 
       <div class="location">
