finished login screen media queries

--- a/assets/pages/Login-screen.html
+++ b/assets/pages/Login-screen.html
@@ -10,7 +10,8 @@
     <main>
       <section class="login">
         <div class="yellow-box">
-          <h1>Login</h1>
+          <img src="/assets/images/walmart.png" alt="image" id="store"/>
+          <h1>LOGIN</h1>
           <p id="details">Please enter your details below</p>
 
           <form>
